--- a/styles.css
+++ b/styles.css
@@ -73,11 +73,12 @@ border: none;
 }
 
 .note-block {
+    position: absolute;
     margin-top: 15px;
     display: flex;
     background-color: rgba(255, 255, 255, 0.5);
-    height: 50vh;
-    width: 100%;
+    height: 100%;
+    width: 80%;
     border: solid 5px #E92E35ff;
     border-radius: 15px; /* Adjust the value to control the roundness of the corners */
 }
